[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/GDEditor/Scenes/CharacterStatePopup.gd" type="Script" id=1]
[ext_resource path="res://addons/GDEditor/Scenes/CharacterStateTree.gd" type="Script" id=2]
[ext_resource path="res://addons/GDEditor/Scenes/CharacterStateDialog.gd" type="Script" id=3]

[node name="CharacterStateTree" type="Tree"]
margin_right = 200.0
margin_bottom = 596.0
rect_min_size = Vector2( 200, 0 )
rect_clip_content = false
allow_reselect = true
allow_rmb_select = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterStatePopup" type="PopupMenu" parent="."]
margin_right = 198.0
margin_bottom = 87.0
items = [ "Edit State", null, 0, false, false, 0, 0, null, "", false, "Delete Selected", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterStateDialog" type="WindowDialog" parent="."]
visible = true
margin_left = 326.0
margin_top = 17.0
margin_right = 632.0
margin_bottom = 170.0
window_title = "State Editor"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CharacterStateDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterStateDialog/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 296.0
margin_bottom = 143.0

[node name="ScrollContainer" type="ScrollContainer" parent="CharacterStateDialog/MarginContainer/VBoxContainer"]
margin_right = 286.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="CharacterStateDialog/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 286.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 0
columns = 2

[node name="TypeLabel" type="Label" parent="CharacterStateDialog/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 3.0
margin_right = 120.0
margin_bottom = 17.0
rect_min_size = Vector2( 120, 0 )
text = "Type"

[node name="TypeOption" type="OptionButton" parent="CharacterStateDialog/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 120.0
margin_right = 286.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "string"
items = [ "string", null, false, 0, null, "bool", null, false, 1, null, "int", null, false, 2, null, "float", null, false, 3, null ]
selected = 0

[node name="ArrayLabel" type="Label" parent="CharacterStateDialog/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 35.0
margin_right = 120.0
margin_bottom = 49.0
text = "Array"

[node name="ArrayCheckBox" type="CheckBox" parent="CharacterStateDialog/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 120.0
margin_top = 30.0
margin_right = 286.0
margin_bottom = 54.0
flat = true

[node name="ValueLabel" type="Label" parent="CharacterStateDialog/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 83.0
text = "Value"

[node name="ValueEdit" type="LineEdit" parent="CharacterStateDialog/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
margin_left = 120.0
margin_top = 64.0
margin_right = 286.0
margin_bottom = 88.0

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterStateDialog/MarginContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 286.0
margin_bottom = 133.0
size_flags_vertical = 0
custom_constants/separation = 20
alignment = 1

[node name="CancelBtn" type="Button" parent="CharacterStateDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 136.0
margin_bottom = 20.0
text = "Cancel"

[node name="ConfirmBtn" type="Button" parent="CharacterStateDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 20.0
text = "Apply"

[connection signal="button_pressed" from="." to="." method="_on_button_pressed"]
[connection signal="item_edited" from="." to="." method="_on_item_edited"]
[connection signal="item_rmb_selected" from="." to="." method="_on_item_rmb_selected"]
[connection signal="delete_selected" from="CharacterStatePopup" to="." method="_on_StatePopup_delete_selected"]
[connection signal="id_pressed" from="CharacterStatePopup" to="CharacterStatePopup" method="_on_id_pressed"]
[connection signal="state_edited" from="CharacterStatePopup" to="." method="_on_StatePopup_state_edited"]
[connection signal="item_selected" from="CharacterStateDialog/MarginContainer/VBoxContainer/ScrollContainer/GridContainer/TypeOption" to="CharacterStateDialog" method="_on_TypeOption_item_selected"]
